--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<h>
-    <title>My Page</title>
-    <link rel="stylesheet" href="syles.css">
-</h>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Ben Graczyk's Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <p class="center-text">My Page</p>
+    <p>
+        This is my personal website that I'll be working on for my AP Computer Science class.
+        <a href="https://github.com/Quarwhar/Quarwhar.github.io.git">
+        Click here to visit my repository for this website, 
+        https://github.com/Quarwhar/Quarwhar.github.io.git</a>
+    </p>
+</body>
+</html>
