changing of names, nav bar, and first page template

--- a/home.html
+++ b/home.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ben Graczyk's Website</title>
+    <title>Home - Ben Graczyk</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
         <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="firstpage.html">First Page</a></li>
         </ul>
     </nav>
 
     <!-- Home Page Content -->
-    <section id="home">
+    <section id="introduction">
         <p class="center-text">HomePage</p>
         <p>
             This is my personal website that I'll be working on for my AP Computer Science class.
