--- a/home.html
+++ b/home.html
@@ -1,28 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Home - Ben Graczyk</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Home - Ben Graczyk</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Calendar Styles */
+    .calendar {
+      width: 1000px;
+      height: 1000px;
+      margin: 2rem auto;
+      text-align: center;
+    }
+    .calendar-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .calendar-days, .calendar-dates {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+    }
+    .calendar-dates div {
+        padding: 5px;
+         height: 60px;
+         text-align: left;      /* Align text to the left */
+         vertical-align: top;   /* Doesn't affect divs by default */
+         display: flex;         /* Use flexbox */
+        align-items: flex-start;
+         justify-content: flex-start;
+         border: 1px solid #ccc;
+         font-size: 14px;
+    }
+    .today {
+      background-color: #00f7eaea;
+      color: black; 
+    }
+  </style>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="firstpage.html">First Page</a></li>
-        </ul>
-    </nav>
 
-    <!-- Home Page Content -->
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li><a href="home.html">Home</a></li>
+      <li><a href="firstpage.html">First Page</a></li>
+    </ul>
+  </nav>
+
+  <!-- Home Page Content -->
+  <main>
     <section id="introduction">
-        <p class="center-text">HomePage</p>
-        <p>
-            This is my personal website that I'll be working on for my AP Computer Science class.
-            <a href="https://github.com/Quarwhar/Quarwhar.github.io.git">
-            Click here to visit my public GitHub repository for this website, 
-            https://github.com/Quarwhar/Quarwhar.github.io.git</a>
-        </p>
+      <p>
+        This is my personal website that I'll be working on for my AP Computer Science class.
+        Click <a href="https://github.com/Quarwhar/Quarwhar.github.io.git" target="_blank" rel="noopener noreferrer">
+        here</a> to visit my public GitHub repository for this website.
+      </p>
     </section>
 
+    <!-- Calendar Section -->
+    <section id="calendar-section">
+      <h3 class="center-text">Calendar</h3>
+      <div class="calendar">
+        <div class="calendar-header">
+          <button id="prev">&#8249;</button>
+          <h2 id="month-year"></h2>
+          <button id="next">&#8250;</button>
+        </div>
+        <div class="calendar-days">
+          <div>Sun</div><div>Mon</div><div>Tue</div><div>Wed</div><div>Thu</div><div>Fri</div><div>Sat</div>
+        </div>
+        <div class="calendar-dates" id="calendar-dates"></div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Load the external calendar script -->
+  <script src="calendar.js"></script>
 </body>
 </html>
