--- a/home.html
+++ b/home.html
@@ -47,6 +47,39 @@
       background-color: #00f7eaea;
       color: black; 
     }
+    .activity-list button {
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    .activity-list {
+      margin-top: 5px;
+      width: 100%;
+    }
+
+    .activity-item {
+      background-color: #f0f8ff;
+      border: 1px solid #007acc;
+      border-radius: 4px;
+      padding: 2px 6px;
+      font-size: 10px;
+      margin-top: 2px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .delete-btn {
+      background: none;
+      border: none;
+      color: red;
+      font-weight: bold;
+      font-size: 12px;
+      cursor: pointer;
+      margin-left: 5px;
+    }
+     
+    
   </style>
 </head>
 <body>
@@ -86,5 +119,16 @@
 
   <!-- Load the external calendar script -->
   <script src="calendar.js"></script>
+
+  <div id="modalOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.3); z-index:999;" onclick="closeModal(event)">
+    <div id="eventModal" style="background:#fff; padding:1rem; border:1px solid #ccc; width:300px; margin:10% auto; position:relative;" onclick="event.stopPropagation()">
+      <h3>Add Event</h3>
+      <input type="text" id="eventTitle" placeholder="Event Title"><br><br>
+      <button onclick="saveEvent()">Save</button>
+      <button onclick="closeModal()">Cancel</button>
+      <input type="hidden" id="eventDate">
+    </div>
+  </div>
+
 </body>
 </html>
